--- a/src/app/patient-record/patient-record.component.html
+++ b/src/app/patient-record/patient-record.component.html
@@ -13,12 +13,13 @@
   <div class="bg-[#F6F8FC] shadow-md border border-tone-2 sm:rounded-lg">
     <form name="patientinfo" class="grid grid-col grid-cols-6 m-6">
       <div class="flex flex-col col-span-2 p-1">
-        <label for="patient-name" class="text-label">Patient Name</label>
+        <label for="patient-name" class="text-label" >Patient name</label>
         <input
           type="text"
           id="patient-name"
+          placeholder="Type in patient name..."
           #patientName
-          class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
+          class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
         />
       </div>
       <div class="flex flex-col p-1 col-span-2">
@@ -28,8 +29,9 @@
         <input
           type="text"
           id="patient-last-name"
+          placeholder="Type in patient last name..."
           #patientLastName
-          class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
+          class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
         />
       </div>
       <div class="flex flex-col p-1">
@@ -100,7 +102,7 @@
             <!-- <td class="px-6 py-4">{{ record.score }}</td> -->
             <td class="px-6 py-6">
               <div class="">
-                <app-risk-label risk=">75%" riskClass="4"></app-risk-label>
+                <app-risk-label [risk]="record.risk ?? 'INCOMPLETE'" [riskClass]="record.riskClass"></app-risk-label>
               </div>
             </td>
             <td *ngIf="showDetailsButton" class="px-6 py-4 inline-block">
