--- a/src/app/risk-score/risk-score.component.html
+++ b/src/app/risk-score/risk-score.component.html
@@ -5,8 +5,8 @@
     }} {{ RiskClass == '2' ? yellow : '' }} {{
       RiskClass == '3' ? orange : ''
     }} {{ RiskClass == '4' ? red : '' }} 
-  p-6 flex flex-col justify-between
-  rounded-md
+  p-6 flex flex-col justify-center gap-16 self-start
+  rounded-md 
   "
   >
     <p class="uppercase">{{ ScoreHeader }}</p>
@@ -18,8 +18,8 @@
     }} {{ RiskClass == '2' ? yellow : '' }} {{
       RiskClass == '3' ? orange : ''
     }} {{ RiskClass == '4' ? red : '' }}
-  p-6 flex flex-col justify-between
-  rounded-md
+  p-6 flex flex-col
+  rounded-md justify-center gap-10 self-start
    "
   >
     <p class="uppercase">{{ RiskHeader }}</p>
