--- a/src/app/score/footnote/footnote.component.html
+++ b/src/app/score/footnote/footnote.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row text-label text-xs px-8 gap-1">
+<div class="flex flex-row text-label text-xs gap-1">
     <p class="font-bold">{{ header }}</p>
     <p class="font-normal">{{ text }}</p>
 </div>
