--- a/src/app/patient-record/patient-record.component.html
+++ b/src/app/patient-record/patient-record.component.html
@@ -18,7 +18,9 @@
           type="text"
           id="patient-name"
           placeholder="Type in patient name..."
+          placeholder="Type in patient name..."
           #patientName
+          class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
           class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
         />
       </div>
@@ -30,7 +32,9 @@
           type="text"
           id="patient-last-name"
           placeholder="Type in patient last name..."
+          placeholder="Type in patient last name..."
           #patientLastName
+          class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
           class="basis-1/2 rounded-md border py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 border-tone-2"
         />
       </div>
