--- a/src/app/biomarker/biomarker.component.html
+++ b/src/app/biomarker/biomarker.component.html
@@ -26,8 +26,8 @@
         [class]="
           biomarker.value === choice ||
           biomarker.value === ('yes'.toUpperCase() === choice.toUpperCase())
-            ? 'px-2 py-2.5 rounded items-center self-stretch border border-primary bg-primary text-white'
-            : 'flex px-2 py-2.5 border border-tone-2 rounded items-center self-stretch bg-tone-1 text-text'
+            ? 'px-2 py-2.5 rounded items-center self-stretch border border-primary bg-primary text-white shadow-sm'
+            : 'flex px-2 py-2.5 border border-tone-2 rounded items-center self-stretch bg-tone-1 text-text shadow-sm'
         "
         [class.aria-selected]="
           biomarker.value === choice ||
@@ -42,28 +42,35 @@
 
   <div
     *ngIf="requiredType === inputTypeEnum.Number"
-    [class]="biomarker.isValid ? 'relative mt-2 w-2/3 rounded-md shadow-sm' : 'relative mt-2 w-2/3 rounded-md shadow-sm border border-text-red'"
+    class="relative mt-2 rounded-md shadow-sm"
   >
     <input
-      type="number"
+      type="number" min="0"
       [(ngModel)]="biomarker.value"
-      class="block w-full rounded-md border-0 py-1.5 pl-2 text-gray-900 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-      [placeholder]="biomarker.selectedUnit.type === 'integer' ? 0 : '0.00'"
+      (input)="onValueChanged()"
+      [class]="
+        biomarker.isValid
+        ? 'block w-full rounded-md border border-tone-2 py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6'
+        : 'block w-full rounded-md border border-text-red py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-text-red focus:outline-none sm:text-sm sm:leading-6'
+        "
+      
+      [placeholder]="biomarker.selectedUnit.type === 'float' ? '0.00': '0'"
     />
     <div class="absolute inset-y-0 right-0 flex items-center">
       <select
         *ngIf="biomarker.units.length > 1"
         name="unitSelector"
         [(ngModel)]="biomarker.selectedUnit"
-        class="h-full rounded-md border-0 bg-transparent py-0 pl-2 pr-2 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm"
+        class=" py-1 px-2 mr-1 text-gray-500 focus:outline-none sm:text-sm text-label-2"
+        (change)="validateEntry"
       >
-        <option *ngFor="let unit of biomarker.units" [ngValue]="unit">
+        <option class="pr-2" *ngFor="let unit of biomarker.units" [ngValue]="unit">
           {{ unit.name }}
         </option>
       </select>
       <div
         *ngIf="biomarker.units.length === 1"
-        class="h-full rounded-md border-0 bg-transparent py-0 pl-2 pr-2 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm flex items-center justify-center"
+        class="h-full rounded-md  py-1 pl-2 pr-2 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm flex items-center justify-center text-label-2"
       >
         <p class="text-center">{{ biomarker.selectedUnit.name }}</p>
       </div>
@@ -71,12 +78,16 @@
   </div>
 
   <div *ngIf="requiredType === inputTypeEnum.String">
-    <input
-      class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-text ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-      type="text"
+   <input 
+      (input)="onValueChanged()" 
+      [class]="
+      biomarker.isValid
+      ? 'block w-full rounded-md border border-tone-2 py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6'
+      : 'block w-full rounded-md border border-text-red py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-text-red focus:outline-none sm:text-sm sm:leading-6'
+      "      type="text"
       [(ngModel)]="biomarker.value"
     />
   </div>
-  <p *ngIf="!biomarker.isValid" class="text-text-red">{{ biomarker.errorMessage }}</p>
-  <p *ngIf="biomarker.isValid" class="">   </p>
+  <p *ngIf="!biomarker.isValid" class="text-text-red">{{biomarker.errorMessage}}</p>
+  <p *ngIf="biomarker.isValid" class=""></p>
 </div>
