--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,9 +6,9 @@
             <h2 class="text-primary">Identity Settings</h2>
             <hr class="text-primary pb-6">
             <div name="mail" class="flex flex-row items-center h-full py-2.5">
-                <label for="emailAdress" class="basis-1/2 py-1.5 sm:text-sm">E-mail</label>
+                <label for="emailAdress" class="basis-1/2 py-1.5 sm:text-sm">E-Mail</label>
                 <input
-                    class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 disabled: bg-disabled"
+                    class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 disabled: bg-disabled"
                     readonly id="emailAdress" type="email" formControlName="emailAddress"
                     [(ngModel)]="updatedUserProfile.emailAddress">
             </div>
@@ -19,7 +19,7 @@
             <div name="salutation" class="flex flex-row items-center h-full py-2.5">
                 <label for="salutation" class="basis-1/2 py-1.5 sm:text-sm">Salutation</label>
                 <select
-                    class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                    class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                     name="salutation" id="salutation" formControlName="salutation"
                     [(ngModel)]="updatedUserProfile.salutation">
                     <option value="mr">Mr.</option>
@@ -30,67 +30,67 @@
             <div name="title" class="flex flex-row items-center h-full py-2.5">
                 <label for="title" class="basis-1/2 py-1.5 sm:text-sm">Title</label>
                 <input
-                    class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
-                    id="Title" type="text" formControlName="title" [(ngModel)]="updatedUserProfile.title">
+                    class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                     id="Title" type="text" formControlName="title" [(ngModel)]="updatedUserProfile.title">
             </div>
         </div>
         <div name="firstName" class="flex flex-row items-center h-full py-2.5">
             <label for="firstname" class="basis-1/2 py-1.5 sm:text-sm">First Name</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="firstname" type="text" value="user" formControlName="firstName"
                 [(ngModel)]="updatedUserProfile.firstName">
         </div>
         <div name="lastName" class="flex flex-row items-center h-full py-2.5">
             <label for="surname" class="basis-1/2 py-1.5 sm:text-sm">Last Name</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="surname" type="text" formControlName="surname" [(ngModel)]="updatedUserProfile.surname">
         </div>
         <div name="professionalSpecialisation" class="flex flex-row items-center h-full py-2.5">
             <label for="professionalspecialisation" class="basis-1/2 py-1.5 sm:text-sm">Professional
                 Specialisation</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="professionalspecialisation" type="text" formControlName="professionalSpecialisation"
                 [(ngModel)]="updatedUserProfile.professionalSpecialisation">
         </div>
         <div name="department" class="flex flex-row items-center h-full py-2.5">
             <label for="department" class="basis-1/2 py-1.5 sm:text-sm">Department</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="department" type="text" formControlName="department" [(ngModel)]="updatedUserProfile.department">
         </div>
         <div name="preferredLab" class="flex flex-row items-center h-full py-2.5">
             <label for="preferredlab" class="basis-1/2 py-1.5 sm:text-sm">Preferred Lab for Cardio Explorer test
                 analysis</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="preferredlab" type="text" formControlName="preferredLab"
                 [(ngModel)]="updatedUserProfile.preferredLab">
         </div>
         <div name="address" class="flex flex-row items-center h-full py-2.5">
             <label for="address" class="basis-1/2 py-1.5 sm:text-sm">Address</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="address" type="text" formControlName="address" [(ngModel)]="updatedUserProfile.address">
         </div>
         <div name="zip" class="flex flex-row items-center h-full py-2.5">
             <label for="zip" class="basis-1/2 py-1.5 sm:text-sm">ZIP</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="zip" type="text" formControlName="zipCode" [(ngModel)]="updatedUserProfile.zipCode">
         </div>
         <div name="city" class="flex flex-row items-center h-full py-2.5">
             <label for="city" class="basis-1/2 py-1.5 sm:text-sm">City</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="city" type="text" formControlName="city" [(ngModel)]="updatedUserProfile.city">
         </div>
         <div name="countryCode" class="flex flex-row items-center h-full py-2.5">
             <label for="countrycode" class="basis-1/2 py-1.5 sm:text-sm">Country Code</label>
             <select
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 overflow-x-clip min-w-0"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6 overflow-x-clip min-w-0"
                 #countryCode name="countrycode" id="countrycode" (change)="getSelectedCountry(countryCode.value)"
                 formControlName="countryCode" [(ngModel)]="updatedUserProfile.countryCode">
                 <option *ngFor="let code of countryCodes" [value]="code.name">{{code.name}}</option>
@@ -99,14 +99,14 @@
         <div name="telephoneNumber" class="flex flex-row items-center h-full py-2.5">
             <label for="telephoneNumber" class="basis-1/2 py-1.5 sm:text-sm">Telephone Number</label>
             <input
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 id="telephoneNumber" type="text" [value]="userProfile?.telephoneNumber"
                 formControlName="telephoneNumber" [(ngModel)]="updatedUserProfile.telephoneNumber">
         </div>
         <div name="language" class="flex flex-row items-center h-full py-2.5">
             <label for="language" class="basis-1/2 py-1.5 sm:text-sm">Language</label>
             <select
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 name="language" id="language" [value]="userProfile?.language" formControlName="language"
                 [(ngModel)]="updatedUserProfile.language">
                 <option value="english">English</option>
@@ -117,7 +117,7 @@
         <div name=" unitLabValues" class="flex flex-row items-center h-full py-2.5">
             <label for="unitLabValues" class="basis-1/2 py-1.5 sm:text-sm">Units lab values</label>
             <select
-                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-2 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
+                class="basis-1/2 rounded-md border border-tone-2 py-1.5 pl-2 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6"
                 name="unitLabValues" id="unitLabValues" [value]="userProfile?.unitLabValues"
                 formControlName="unitLabValues" [(ngModel)]="updatedUserProfile.unitLabValues">
                 <option value="si">SI</option>
