CE-44 UI: Dynamic localization
* Implemented Drop-down menu in Top bar for selecting current UI language

* Set the users language initially based on UserProfile settings

* Added language service for handling applicationwide language settings

* Adapted Request and Score page to automatically reload the schemas if the language changes

Approved-by: Philipp Schlegel

--- a/src/app/biomarker/biomarker-info/biomarker-info.component.html
+++ b/src/app/biomarker/biomarker-info/biomarker-info.component.html
@@ -9,7 +9,7 @@
     <div class="flex flex-row gap-1">
         <p class="text-text font-normal" name="Value" *ngIf="!isDate && !isBoolean">{{ Value }}</p>
         <p class="text-text font-normal" name="DateValue" *ngIf="isDate">{{ DateValue | date : 'mediumDate' }}</p>
-        <p class="text-text font-normal" name="BooleanValue" *ngIf="isBoolean">{{ !!Value | yesno }}</p>
+        <p class="text-text font-normal" name="BooleanValue" *ngIf="isBoolean">{{ !!Value | yesno | async }}</p>
         <p>{{ Unit }}</p>
     </div>
 </div>
