--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -9,14 +9,14 @@
         class="pl-6 pr-6 pt-2 pb-2 enabled:bg-white enabled:text-secondary rounded-md border font-bold"
         routerLink="/score/new"
       >
-        Calculate new Score
+        {{'scoreCalculateNew' | translate}}
       </button>
       <button
         type="button"
         class="pl-6 pr-6 pt-2 pb-2 ml-2 enabled:bg-secondary enabled:text-white rounded-md border font-bold"
         routerLink="/score/new"
       >
-        Print
+        {{'scorePrint' | translate}}
       </button>
     </div>
   </div>
