--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar class="bg-background" *ngIf="isLoggedIn$ | async">
     <div
       name="main-nav-bar"
-      class="grid grid-cols-5 w-full place-content-center"
+      class="grid grid-cols-6 w-full place-content-center"
     >
       <div routerLink="/" class="hover:cursor-pointer">
         <img alt="logo" src="./assets/CardioLogo.png" class="h-11 px-10" />
@@ -13,7 +13,7 @@
           routerLink="/"
           routerLinkActive="text-secondary"
           [routerLinkActiveOptions]="{ exact: true }"
-          >Existing Scores
+          >{{'existingScores' | translate}}
           <span
             class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary"
             routerLinkActive="max-w-full w-1/6"
@@ -27,7 +27,7 @@
           routerLink="/score/new"
           routerLinkActive="text-secondary"
         >
-          Create new Score
+        {{'createNewScore' | translate}}
           <span
             class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary"
             routerLinkActive="max-w-full w-1/6"
@@ -40,7 +40,7 @@
           mat-button
           [routerLink]="['profile']"
           routerLinkActive="text-secondary"
-          >Profile
+          >{{'profile' | translate}}
           <span
             class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary"
             routerLinkActive="max-w-full w-1/6"
@@ -53,11 +53,17 @@
           mat-raised-button
           (click)="logout()"
         >
-          Logout
+        {{'logout' | translate}}
           <span
             class="block max-w-0 group-hover:max-w-full transition-all duration-500 h-0.5 bg-secondary"
           ></span>
         </button>
+      </div>
+      <div>
+        <select class="bg-background text-primary" [(ngModel)]="selectedLocale" (change)="selectionChanged()">
+          <option selected value="en-GB">🇬🇧 English</option>
+          <option value="de-DE">🇩🇪 Deutsch</option>
+        </select>
       </div>
     </div>
   </mat-toolbar>
