--- a/src/app/biomarker/biomarker.component.html
+++ b/src/app/biomarker/biomarker.component.html
@@ -47,33 +47,45 @@
       (input)="onValueChanged()"
       [class]="
         biomarker.isValid
-          ? 'block w-full rounded-md border border-tone-2 py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6'
-          : 'block w-full rounded-md border border-text-red py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-text-red focus:outline-none sm:text-sm sm:leading-6'
-      "
-      [placeholder]="biomarker.selectedUnit.type === 'float' ? '0.00' : '0'"
+        ? 'block w-full rounded-md border border-tone-2 py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6'
+        : 'block w-full rounded-md border border-text-red py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-text-red focus:outline-none sm:text-sm sm:leading-6'
+        "
+
+      [placeholder]="biomarker.selectedUnit.type === 'float' ? '0.00': '0'"
     />
     <div class="absolute inset-y-0 right-0 flex items-center">
-      <select
-        *ngIf="biomarker.units.length > 1"
-        name="unitSelector"
-        [ngModel]="biomarker.selectedUnit"
-        class=" py-1 px-2 mr-1 text-gray-500 focus:outline-none sm:text-sm text-label-2"
-        (ngModelChange)="onChange($event)"
-      >
-        <option
+      <ng-container *ngIf="!unitTypeEditable; else editUnits">
+        <!-- show only the currently selected units -->
+        <div
+          *ngIf="biomarker.selectedUnit"
+          class="h-full rounded-md py-1 pl-2 pr-2 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm flex items-center justify-center text-label-2"
+        >
+          <p class="text-center">{{ biomarker.selectedUnit.name }}</p>
+        </div>
+      </ng-container>
+      <ng-template #editUnits>
+        <!-- editmode: show editable units and options in -->
+        <select
+          name="unitSelector"
+          [ngModel]="biomarker.selectedUnit"
+          class=" py-1 px-2 mr-1 text-gray-500 focus:outline-none sm:text-sm text-label-2"
+          (ngModelChange)="onChange($event)"
+        >
+          <option
           class="pr-2"
           *ngFor="let unit of biomarker.units"
           [ngValue]="unit"
         >
-          {{ unit.name }}
-        </option>
-      </select>
-      <div
-        *ngIf="biomarker.units.length === 1"
-        class="h-full rounded-md py-1 pl-2 pr-2 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm flex items-center justify-center text-label-2"
-      >
-        <p class="text-center">{{ biomarker.selectedUnit.name }}</p>
-      </div>
+            {{ unit.name }}
+          </option>
+        </select>
+        <div
+          *ngIf="biomarker.units.length === 1"
+          class="h-full rounded-md py-1 pl-2 pr-2 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm flex items-center justify-center text-label-2"
+        >
+          <p class="text-center">{{ biomarker.selectedUnit.name }}</p>
+        </div>
+      </ng-template>
     </div>
   </div>
 
@@ -81,11 +93,10 @@
     <input
       (input)="onValueChanged()"
       [class]="
-        biomarker.isValid
-          ? 'block w-full rounded-md border border-tone-2 py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6'
-          : 'block w-full rounded-md border border-text-red py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-text-red focus:outline-none sm:text-sm sm:leading-6'
-      "
-      type="text"
+      biomarker.isValid
+      ? 'block w-full rounded-md border border-tone-2 py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-primary focus:outline-none sm:text-sm sm:leading-6'
+      : 'block w-full rounded-md border border-text-red py-1.5 px-2 text-gray-900 placeholder:text-gray-400 focus:ring-1 focus:ring-inset focus:ring-text-red focus:outline-none sm:text-sm sm:leading-6'
+      " type="text"
       [(ngModel)]="biomarker.value"
     />
   </div>
