--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,8 +1,27 @@
-<div class="px-8 py-6 mb-4 bg-background border-tone-2 rounded-lg border-solid border grid lg:grid-cols-5 md:grid-cols-4 gap-4">
-    <span [class.col-span-2]="biomarker.id === 'nicotine' || biomarker.id === 'chest_pain'" *ngFor="let biomarker of filteredBiomarkers">
-        <app-biomarker [biomarker]="biomarker" [sideEffectMarkers]="filteredBiomarkers" />
-    </span>
-    <div *ngIf="categoryName !== 'fixed'"class="flex flex-row-reverse col-start-1 col-end-6">
-        <button class="px-4 py-1 flex rounded justify-center items-center gap-2 h-11 underline text-secondary font-[500]">Edit</button>
-    </div>
-</div>
+<ng-container *ngIf="biomarkers.length > 0; else noContent">
+  <!-- Fixed biomarkers -->
+  <app-category-list-fixed [biomarkers]="fixedBiomarkers"></app-category-list-fixed>
+
+  <!-- Flexible biomarkers -->
+  <!-- non-edit-mode -->
+  <app-category-list-flexible
+    *ngIf="!isEditingEnabled"
+    [biomarkers]="flexibleBiomarkers"
+    (isEditingEnabled) ="enableEditMode()"
+  >
+  </app-category-list-flexible>
+
+  <!-- edit-mode -->
+  <app-category-list-flexible-edit
+    *ngIf="isEditingEnabled"
+    [biomarkers]="flexibleBiomarkers"
+    (saveChanges)="savePreferences()"
+  >
+  </app-category-list-flexible-edit>
+
+</ng-container>
+
+<!--No Content-->
+<ng-template #noContent>
+    <div>{{ 'category.noContent' | translate }}</div>
+</ng-template>
