--- a/src/app/patient-data-form/patient-data-form.component.html
+++ b/src/app/patient-data-form/patient-data-form.component.html
@@ -24,7 +24,7 @@
   </div>
   <div>
     <div class="flex flex-row">
-      <label class="text-label"for="patient-last-name">{{'patientLastName' | translate}}</label>
+      <label class="text-label" for="patient-last-name">{{'patientLastName' | translate}}</label>
       <img
         class="pl-1 transititext-primary text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 active:text-primary-700 dark:text-primary-400 dark:hover:text-primary-500 dark:focus:text-primary-500 dark:active:text-primary-600"
         src="./assets/Info.svg"
@@ -64,6 +64,5 @@
     />
   </div>
 </div>
-<div *ngFor="let category of uniqueCategories" class="flex flex-col">
-  <app-category [categoryName]="category" [biomarkers]="biomarkers" />
-</div>
+<app-category [uniqueCategories]="uniqueCategories" [biomarkers]="biomarkers" class="flex flex-col"/>
+
